manifests/angular-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-app
  namespace: pramod-app
  labels:
    app: angular-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: angular-app
  template:
    metadata:
      labels:
        app: angular-app
    spec:
      containers:
        - name: angular-container
          image: pramod858/frontend-ecommerce:latest
          ports:
            - containerPort: 80
