manifests/springboot-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-app
  namespace: pramod-app
  labels:
    app: springboot-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-app
  template:
    metadata:
      labels:
        app: springboot-app
    spec:
      containers:
        - name: springboot-app
          image: your-springboot-image:latest
          ports:
            - containerPort: 8080
