manifests/angular-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: angular-service
  namespace: pramod-app
spec:
  selector:
    app: angular-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
