manifests/springboot-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
  namespace: pramod-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: springboot-app
